# Chrome-multibookmark

ecndev/chmultiBM(完了)/: background.js  manifest.json  popup.html  popup.js
kyuubi2/kyuubi-app/app/: page.tsx
kyuubi2/kyuubi-app/components/: KyuubiWorkspace.tsx
kyuubi2/kyuubi-app/prisma/: dev.db
kyuubi3/learning-x/: .gitignore  Cargo.toml  tauri.conf.json
kyuubi3/learning-x/migrations/: 001_initial.sql
kyuubi3/learning-x/src/: article_manager.rs  commands.rs  database.rs  main.rs  models.rs  sqlite_manager.rs
kyuubi3/qbi/: .gitignore  Cargo.toml  tauri.conf.json
kyuubi3/qbi/migrations/: 0001_initial.sql
kyuubi3/qbi/src/: commands.rs  database.rs  main.rs  models.rs  scraper.rs
quizspider/QS.Backend/: Program.cs  QS.Backend.http
quizspider/QS.Backend/Properties/: launchSettings.json
quizspider/frontend/src/: App.tsx  index.tsx
