[package]
name = "qbi"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thirtyfour = "0.32"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"
scraper = "0.19"
select = "0.6"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
